option('sdl', type: 'boolean', value: false)
option('glfw', type: 'boolean', value: false)
option('opengl', type: 'integer', min: 2, max: 3, value: 2)
option('allegro', type: 'boolean', value: false)
option('sfml', type: 'boolean', value: false)
option('disable_obsolete_functions', type: 'boolean', value: true, description: 'disabling obsolete functions: compilation will fail if using obsolete functions')
option('IMGUI_TLS', type: 'boolean', value: false,
      description: '''TLS hack for thread local ImGui global instance. If enabled, need the following line in one of your source files:
thread_local ImGuiContext* MyImGuiTLS;''')

# unsigned short is the default but allegro shall use int
# option('ImDrawIdx', type: 'combo', choices: ['int', 'unsigned short'], value: 'unsigned short')
